--- a/index.html
+++ b/index.html
@@ -75,6 +75,48 @@
           </div>
         </div>
       </div>
+      <div class="skill">
+        <h2>SKILL</h2>
+        <div class="row">
+          <div class="col-1">
+            <h3>Frontend</h3>
+            <div class="row">
+              <div class="col">
+                <img src="img/html.svg" alt="">
+                <p>HTML</p>
+              </div>
+              <div class="col">
+                <img src="img/css.svg" alt="">
+                <p>CSS</p>
+              </div>
+              <div class="col">
+                <img src="img/javascript.svg" alt="">
+                <p>JS</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-1">
+            <h3>Backend</h3>
+            <div class="row">
+              <div class="col">
+                <img src="img/php.svg" alt="">
+                <p>PHP</p>
+              </div>
+              <div class="col">
+                <img src="img/mysql.svg" alt="">
+                <p>MySQL</p>
+              </div>
+              <div class="col">
+                <img src="img/codeigniter.svg" alt="">
+                <p>Codeigniter</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
+    <footer>
+
+    </footer>
   </body>
 </html>
