--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
             Universitas Brawijaya Malang, jurusan S1 Teknik Informatika. Saya
             memiliki kemampuan di bidang frontend.
           </p>
+          <div class="flex">
+            <img src="img/github.svg" alt="" class="w-10 mr-1" />
+            <img src="img/instagram.svg" alt="" class="w-10 mr-1" />
+            <img src="img/linkedln.svg" alt="" class="w-10 mr-1" />
+          </div>
         </div>
         <div class="w-100 max-600:flex-order-1 text-center">
           <img src="img/fotodiri.jpg" alt="" class="w-60" />
@@ -59,27 +64,21 @@
           <div class="align-content-center m-0">
             <p class="text-2 text-justify m-0 mb-1">Universitas Brawijaya</p>
             <div class="flex">
-              <p class="text-1 text-justify m-0 w-35">
-                S1 Teknik Informatika
-              </p>
+              <p class="text-1 text-justify m-0 w-35">S1 Teknik Informatika</p>
               <p class="text-1 text-justify m-0 w-35">2023 - sekarang</p>
             </div>
             <div class="flex">
-              <p class="text-1 text-justify m-0 w-35">
-                D3 Teknologi Informasi
-              </p>
+              <p class="text-1 text-justify m-0 w-35">D3 Teknologi Informasi</p>
               <p class="text-1 text-justify m-0 w-35">2020 - 2023</p>
             </div>
           </div>
         </div>
         <div class="w-100 p-1">
-          <h2 class="text-2 text-center mb-1">Pengalaman</h2>
+          <h2 class="text-2 text-center mb-1 =">Pengalaman</h2>
           <div class="align-content-center m-0">
             <p class="text-2 text-justify m-0 mb-1">Tumbue Ai</p>
             <div class="flex">
-              <p class="text-1 text-justify m-0 w-35">
-                Mobile Developer
-              </p>
+              <p class="text-1 text-justify m-0 w-35">Mobile Developer</p>
               <p class="text-1 text-justify m-0 w-35">Jan - Jun 2024</p>
             </div>
           </div>
@@ -94,6 +93,71 @@
           </div>
         </div>
       </div>
+      <div class="flex justify-content-center m-1 max-600:flex-column">
+        <div class="w-100 p-1">
+          <h2 class="text-2 text-center mb-1">Frontend</h2>
+          <div class="flex justify-content-center">
+            <div class="align-self-flex-end m-0 text-center mr-1">
+              <img src="img/html.svg" alt="" class="" width="80px" />
+              <p class="text-1 text-center m-0">Profesional</p>
+            </div>
+            <div class="align-self-flex-end m-0 text-center mr-1">
+              <img src="img/css.svg" alt="" class="" width="80px" />
+              <p class="text-1 text-center m-0">Profesional</p>
+            </div>
+            <div class="align-self-flex-end m-0 text-center">
+              <img src="img/javascript.svg" alt="" class="" width="80px" />
+              <p class="text-1 text-center m-0">Profesional</p>
+            </div>
+          </div>
+        </div>
+        <div class="w-100 p-1">
+          <h2 class="text-2 text-center mb-1">Backend</h2>
+          <div class="flex justify-content-center">
+            <div class="align-self-flex-end m-0 text-center mr-1">
+              <img src="img/php.svg" alt="" class="" width="80px" />
+              <p class="text-1 text-center m-0">Profesional</p>
+            </div>
+            <div class="align-self-flex-end m-0 text-center mr-1">
+              <img src="img/codeigniter.svg" alt="" class="" width="80px" />
+              <p class="text-1 text-center m-0">Profesional</p>
+            </div>
+            <div class="align-self-flex-end m-0 text-center">
+              <img src="img/mysql.svg" alt="" class="" width="80px" />
+              <p class="text-1 text-center m-0">Profesional</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <h2 class="text-center text-2">Portfolio</h2>
+      <div class="flex justify-content-center">
+        <div class="border test mr-1 w-20">
+          <div class="card text-center p-1">
+            <img src="img/logo.png" alt="" width="100%" />
+            <h4>Aplikasi</h4>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Aspernatur illum aliquam praesentium excepturi?
+            </p>
+            <button>Demo</button>
+          </div>
+        </div>
+        <div class="border test w-20">
+          <div class="card text-center p-1">
+            <img src="img/logo.png" alt="" width="100%" />
+            <h4>Aplikasi</h4>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Aspernatur illum aliquam praesentium excepturi?
+            </p>
+            <button>Demo</button>
+          </div>
+        </div>
+      </div>
     </main>
+    <footer>
+      <h6 class="text-1 text-center">&copy 2024 xxfizlmi</h6>
+    </footer>
   </body>
 </html>
