--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
 
       <h2 class="text-center text-2">Portfolio</h2>
       <div class="flex justify-content-center">
-        <div class="border test mr-1 w-20">
-          <div class="card text-center p-1">
+        <div class="mr-1 w-20">
+          <div class="card text-center p-1 border-radius-2">
             <img src="img/logo.png" alt="" width="100%" />
             <h4>Aplikasi</h4>
             <p>
@@ -143,8 +143,8 @@
             <button>Demo</button>
           </div>
         </div>
-        <div class="border test w-20">
-          <div class="card text-center p-1">
+        <div class="mr-1 w-20">
+          <div class="card text-center p-1 border-radius-2">
             <img src="img/logo.png" alt="" width="100%" />
             <h4>Aplikasi</h4>
             <p>
