--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>My Personal</title>
+    <link rel="shortcut icon" href="img/coding.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
@@ -43,7 +44,7 @@
     <main>
       <section id="home" data-aos="fade">
         <div class="column">
-          <img src="/img/profil.png" alt="" width="100%" />
+          <img src="img/profil.png" alt="" width="100%" />
         </div>
         <div class="column">
           <h3>Hello, I'm Hafiz</h3>
